bug: fix issue with aside overlapping content on resize

--- a/components/Aside/Aside.module.sass
+++ b/components/Aside/Aside.module.sass
@@ -3,7 +3,6 @@
   top: 0
   display: inline-block
   float: inline-start
-  border: 2px dashed red
   height: 100vh
   z-index: 2
   width: 0 // Prevents aside from pushing content
@@ -11,10 +10,15 @@
 .nav
   width: 100px
   height: 100%
+  background-color: #1e1e1e
 
   ul
     height: 100%
     display: flex
     flex-direction: column
-    justify-content: space-around
+    justify-content: center
+    gap: 18%
     align-items: center
+    font-family: "IBM Plex Mono", monospace
+    font-size: 1.4rem
+    text-transform: uppercase
