--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -32,6 +32,8 @@ main
 
 section
   margin: 20px 80px
+  position: relative
+  z-index: 4
 
   @if $show-section-borders
     border: 2px solid blue
